<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/choose_level"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <TextView
        android:id="@+id/first_level"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/first_level"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <TextView
        android:id="@+id/second_level"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/second_level"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <TextView
        android:id="@+id/hard_level"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/hard_level"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
</LinearLayout>